fix(Exercise08, Exercise09): adjust Footer component for dark mode

--- a/src/exercises/Exercise09/components/Footer/style.module.css
+++ b/src/exercises/Exercise09/components/Footer/style.module.css
@@ -15,6 +15,16 @@
   text-indent: 0px;
 }
 
+@media (prefers-color-scheme: dark) {
+  .footer {
+    border-top: 1px solid #fff;
+  }
+
+  .footer > p {
+    color: #fff;
+  }
+}
+
 @media (min-width: 425px) {
   .footer {
     font-size: 1rem;
